y3/jpp/assignment-interpreter/luna/examples/bad/06-06-bad-return.luna
fn getint()->int {
    return "hi";
}